Update eGuides page to show re-branded material and link to new landing pages

--- a/eguides/index.html
+++ b/eguides/index.html
@@ -1,7 +1,7 @@
 ---
 layout: media
 title: eGuide series
-head-title: eGuide series&#58; Benefits from cloud, PaaS, DevOps and hybrid cloud
+head-title: eGuide series&#58; What are the benefits of cloud computing solutions?
 category: eguide
 class: media
 ---
@@ -9,24 +9,57 @@ class: media
 <div class="jumbotron">
   <div class="container">
     <h1>eGuide series</h1>
-    <h2>Read about the value SixSq products and services can deliver to you and your organisation.</h2>
+    <h2>Find out how SixSq products and services can benefit you and your organisation.</h2>
   </div>
 </div>
 
 <div class="container big">
-
+    <div id="cyber-protection-eguide" class="row row-highlights">
+      <div class="col-md-6 col-2-text">
+        <h1>Cyber protection for critical infrastructures</h1>
+        <p>All connected systems are vulnerable to cyber attacks. Are you responsible for cyber protection of critical infrastructures? Are you worried about the governance of your infrastructure in the face of cyber attacks? If so, read on.</p>
+        <center>
+          <p><a href="http://media.sixsq.com/cyber-protection-for-critical-infrastructures" class="btn btn-primary btn-lg" role="button">Read more &raquo;</a></p>
+        </center>
+      </div>
+      <div class="col-md-6 col-2-image">
+        <h1>
+            <center>
+                <img style="max-height: 280px;" src="/img/content/eguides/eguide_smart_city_cyber.png" alt="eguide_smart_city_cyber"/>
+            </center>
+        </h1>
+      </div>
+    </div>
+    <div id="smart-city-eguide" class="row row-highlights">
+         <div class="col-md-6 col-2-image">
+           <h1>
+               <center>
+                   <img style="max-height: 280px;" src="/img/content/eguides/Smart_city_eguide_screen_shot.png" alt="eguide_lifting_lid_smart_cities_screen_shot"/>
+               </center>
+           </h1>
+         </div>
+         <div class="col-md-6 col-2-text">
+             <h1>Cloud Solutions for Smart Cities</h1>
+             <p>Smart Cities are the new tech topic. How do cloud technologies play a role in Smart Cities? Find out how to set the building blocks for your city in the cloud </p>
+             <center>
+               <p><a href="http://media.sixsq.com/cyber-protection-for-smart-cities" 
+                   class="btn btn-primary btn-lg" role="button">Find out more &raquo;</a></p>
+             </center>
+         </div>
+     </div>
+    
   <div id="msp-eguide" class="row row-highlights">
     <div class="col-md-6 col-2-text">
         <h1>Managed Service Providers</h1>
-        <p>Why Managed Service Providers Should Focus on Automation.</p>
+        <p>Are you a Managed Service Provider looking to improve your services in this cloud era? Find out how introducing an affordable application deployment tool can change your business</p>
         <center>
-          <a href="http://media.sixsq.com/how-can-managed-service-providers-benefit-from-automation" class="btn btn-primary btn-lg" role="button">Get It &raquo;</a>
+          <a href="http://media.sixsq.com/adding-value-to-managed-services" class="btn btn-primary btn-lg" role="button">Read it now &raquo;</a>
         </center>
     </div>
     <div class="col-md-6 col-2-image">
       <h1>
           <center>
-              <img style="max-height: 280px;" src="/img/content/eguides/MSP_eGuide_screen_shot.png" alt="MSP_eGuide_screen_shot"/>
+              <img style="max-height: 280px;" src="/img/content/eguides/MSP_eguide_screen_shot.png" alt="MSP_eGuide_screen_shot"/>
           </center>
       </h1>
     </div>
@@ -36,15 +69,15 @@ class: media
       <div class="col-md-6 col-2-image">
         <h1>
             <center>
-                <img style="max-height: 280px;" src="/img/content/eguides/VAR_eGuide_screen_shot.png" alt="VAR_eGuide_screen_shot"/>
+                <img style="max-height: 280px;" src="/img/content/eguides/VAR_eguide_screen_shotv2.png" alt="VAR_eGuide_screen_shot"/>
             </center>
         </h1>
       </div>
       <div class="col-md-6 col-2-text">
           <h1>Value-Added Resellers</h1>
-          <p>How Value-Added Resellers Benefit from Application Deployment Automation</p>
+          <p>How can Value-Added Resellers capitalise on their application knowledge to provide managed services?  </p>
           <center>
-            <p><a href="http://media.sixsq.com/how-can-vars-benefit-from-application-deployment-automation" class="btn btn-primary btn-lg" role="button">Get It &raquo;</a></p>
+            <p><a href="http://media.sixsq.com/how-can-vars-benefit-from-application-deployment-automation" class="btn btn-primary btn-lg" role="button">Find out more &raquo;</a></p>
           </center>
       </div>
   </div>
@@ -52,51 +85,52 @@ class: media
   <div id="iaas-eguide" class="row row-highlights">
     <div class="col-md-6 col-2-text">
       <h1>IaaS Service Providers</h1>
-      <p>How IaaS Service Providers Benefit from Application Deployment Automation</p>
+      <p>With so much competition in the cloud infrastructure market, IaaS providers have to find new ways to stand out. SixSq has the answer.</p>
       <center>
-        <p><a href="http://media.sixsq.com/how-can-iaas-providers-benefit-from-application-deployment-automation" class="btn btn-primary btn-lg" role="button">Get It &raquo;</a></p>
+        <p><a href="http://media.sixsq.com/how-can-iaas-providers-benefit-from-application-deployment-automation" class="btn btn-primary btn-lg" role="button">The answer is a click away &raquo;</a></p>
       </center>
     </div>
     <div class="col-md-6 col-2-image">
       <h1>
           <center>
-              <img style="max-height: 280px;" src="/img/content/eguides/IaaS_eGuide_screen_shot.png" alt="IaaS_eGuide_screen_shot"/>
+              <img style="max-height: 280px;" src="/img/content/eguides/IaaS_eguide_screen-shot.png" alt="IaaS_eGuide_screen_shot"/>
           </center>
       </h1>
     </div>
   </div>
 
-  <div id="hnx" class="row row-highlights">
-      <div class="col-md-6 col-2-image">
-        <h1>
-            <center>
-                <img style="max-height: 280px;" src="/img/content/eguides/HNX_basics_eGuide_screen_shot.png" alt="HNX_basics_eGuide_screen_shot"/>
-            </center>
-        </h1>
-      </div>
-      <div class="col-md-6 col-2-text">
-        <h1>Helix Nebula Marketplace</h1>
-        <p>How Helix Nebula Marketplace Delivers Cloud to Big Science</p>
-        <center>
-          <p><a href="http://media.sixsq.com/how-helix-nebula-marketplace-delivers-cloud-to-big-science" class="btn btn-primary btn-lg" role="button">Get It &raquo;</a></p>
-        </center>
-      </div>
-  </div>
-
 <div id="elearning" class="row row-highlights">
   <div class="col-md-6 col-2-text">
-    <h1>IT providers in emerging economies</h1>
-    <p>How to bridge the digital divide in emerging economies</p>
+    <h1>Revolutionising education in emerging markets</h1>
+    <p>Are you looking for a way to bring your software solutions to rural areas? Do you want to give your satellite technology an added boost? The NuvlaBox is a simple, affordable IT solution which can do just that</p>
     <center>
-      <p><a href="http://media.sixsq.com/how-to-bridge-the-digital-divide" class="btn btn-primary btn-lg" role="button">Get It &raquo;</a></p>
+      <p><a href="http://media.sixsq.com/how-to-bridge-the-digital-divide" class="btn btn-primary btn-lg" role="button">Read more &raquo;</a></p>
     </center>
   </div>
   <div class="col-md-6 col-2-image">
     <h1>
         <center>
-            <img style="max-height: 280px;" src="/img/content/eguides/eLearning_in_emerging_economies_eGuide_screen_shot.png" alt="eLearning_in_emerging_economies_eGuide_screen_shot"/>
+            <img style="max-height: 280px;" src="/img/content/eguides/NuvlaBox_emerging_markets_screen_shot.png" alt="eLearning_in_emerging_economies_eGuide_screen_shot"/>
         </center>
     </h1>
   </div>
 </div>
+
+<div id="hnx" class="row row-highlights">
+     <div class="col-md-6 col-2-image">
+       <h1>
+           <center>
+               <img style="max-height: 280px;" src="/img/content/eguides/HNX_basics_eGuide_screen_shot.png" alt="HNX_basics_eGuide_screen_shot"/>
+           </center>
+       </h1>
+     </div>
+     <div class="col-md-6 col-2-text">
+       <h1>Helix Nebula Marketplace</h1>
+       <p>How Helix Nebula Marketplace Delivers Cloud to Big Science</p>
+       <center>
+         <p><a href="http://media.sixsq.com/how-helix-nebula-marketplace-delivers-cloud-to-big-science" class="btn btn-primary btn-lg" role="button">Find out &raquo;</a></p>
+       </center>
+     </div>
+ </div>
+
 
