Small changes to users wording

--- a/personae/index.html
+++ b/personae/index.html
@@ -1,7 +1,7 @@
 ---
 layout: personae_index
-title: Who we designed SlipStream for?
-head-title: Our personae&#58; find out how SixSq helps you in your role
+title: Who uses SlipStream and why?
+head-title: SlipStream users&#58; speeding up app development
 category: personae
 class: personae
 ---
