Minor cosmetic and contact updates

--- a/contact.html
+++ b/contact.html
@@ -67,8 +67,8 @@ redirect_from:
       <h3>Or come and visit</h3>
       <p>SixSq</p>
       <p>Rue du Bois-du-Lan, 8</p>
-      <p>1217, Geneva (Meyrin)</p>
-      <p>Switzerland</p>
+      <p>1217, Meyrin</p>
+      <p>Geneva, Switzerland</p>
     </div>
 
     <div class="col-xs-12 col-md-8">
@@ -84,11 +84,11 @@ redirect_from:
   <div class="row">
     <div class="col-md-4 address">
       <h3>Phone</h3>
-      <p>Info/support: +1 514 878 4388</p>
+      <p>Info/support: +1 (514) 878 4388</p>
 
       <h3>Or come and visit</h3>
       <p>SixSq</p>
-      <p>6700 Côte de Liesse, Suite 105</p>
+      <p>6700 Côte de Liesse, Suite 102</p>
       <p>Montréal (St-Laurent), Québec</p>
       <p>H4T 2B5</p>
       <p>Canada</p>
