--- a/contact.html
+++ b/contact.html
@@ -94,9 +94,10 @@ redirect_from:
       <p>Canada</p>
     </div>
     <div class="col-md-8">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2797.333696368921!2d-73.6943187!3d45.48322460000001!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cc9179300328075%3A0x6eff32a5d79db640!2s6700+de+la+C%C3%B4te-de-Liesse+Ch+%23105!5e0!3m2!1sen!2sch!4v1404120534296" width="100%" height="400" frameborder="0" style="border:0"></iframe>
+	  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2797.3408226421693!2d-73.69644434847407!3d45.48308107899864!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cc917930085dbaf%3A0x735d509b7894e753!2s6700+Chemin+de+la+C%C3%B4te-de-Liesse+%23102%2C+Saint-Laurent%2C+QC+H4T+2B5%2C+Canada!5e0!3m2!1sen!2sch!4v1475689894837" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+
       <small>
-        <a href="https://www.google.ch/maps/place/6700+de+la+Côte-de-Liesse+Ch+%23105/@45.4832246,-73.6943187,17z/data=!3m1!4b1!4m2!3m1!1s0x4cc9179300328075:0x6eff32a5d79db640?hl=en" style="color:#0000FF;text-align:left"><p/>View Larger Map</a>
+        <a href="https://www.google.ch/maps/place/6700+Chemin+de+la+C%C3%B4te-de-Liesse+%23102,+Saint-Laurent,+QC+H4T+2B5,+Canada/@45.4830811,-73.6964443,17z/data=!3m1!4b1!4m5!3m4!1s0x4cc917930085dbaf:0x735d509b7894e753!8m2!3d45.4830811!4d-73.6942503?hl=en" style="color:#0000FF;text-align:left"><p/>View Larger Map</a>
       </small>
     </div>
   </div>
