--- a/videos/index.html
+++ b/videos/index.html
@@ -8,21 +8,23 @@ class: media
 
 <div class="jumbotron">
   <div class="container">
-    <h1>SixSq Video Channel</h1>
+    <h1>SixSq Video Channels</h1>
   </div>
 </div>
 
-<div id="tutorials" class="container spacy">
-  <h1>Tutorials</h1>
-  <div class="row"></div>
-  <p><a href="//www.youtube.com/channel/UCGYw3n7c-QsDtsVH32By1-g" class="btn btn-primary btn-lg" role="button">Watch now &raquo;</a></p>
+<div class="jumbotron even">
+  <div id="talks" class="container">
+    <h1>Discover</h1>
+    <div class="row"></div>
+    <p><a href="//www.youtube.com/channel/UCGYw3n7c-QsDtsVH32By1-g" class="btn btn-primary btn-lg" role="button">Watch on Youtube &raquo;</a></p>
+  </div>
 </div>
 
-<div class="nuvlabox odd">
-  <div id="talks" class="container spacy">
-    <h1>Talks</h1>
+<div class="jumbotron odd">
+  <div id="tutorials" class="container">
+    <h1>Tutorials</h1>
     <div class="row"></div>
-    <p><a href="//www.youtube.com/channel/UCGYw3n7c-QsDtsVH32By1-g" class="btn btn-primary btn-lg" role="button">View videos &raquo;</a></p>
+    <p><a href="//www.youtube.com/channel/UCGYw3n7c-QsDtsVH32By1-g" class="btn btn-primary btn-lg" role="button">Watch on Youtube &raquo;</a></p>
   </div>
 </div>
 
