--- a/eguides/index.html
+++ b/eguides/index.html
@@ -13,6 +13,7 @@ category: resources
   </div>
 </div>
 
+<div class="jumbotron">
 <div class="container big">
     <div id="cyber-protection-eguide" class="row row-highlights">
       <div class="col-md-6 col-2-text">
@@ -100,13 +101,6 @@ category: resources
   </div>
 
 <div id="elearning" class="row row-highlights">
-  <div class="col-md-6 col-2-text">
-    <h1>Revolutionising education in emerging markets</h1>
-    <p>Are you looking for a way to bring your software solutions to rural areas? Do you want to give your satellite technology an added boost? The NuvlaBox is a simple, affordable IT solution which can do just that</p>
-    <center>
-      <p><a href="http://media.sixsq.com/how-to-bridge-the-digital-divide" class="btn btn-primary btn-lg" role="button">Read more &raquo;</a></p>
-    </center>
-  </div>
   <div class="col-md-6 col-2-image">
     <h1>
         <center>
@@ -114,8 +108,12 @@ category: resources
         </center>
     </h1>
   </div>
+  <div class="col-md-6 col-2-text">
+    <h1>Revolutionising education in emerging markets</h1>
+    <p>Are you looking for a way to bring your software solutions to rural areas? Do you want to give your satellite technology an added boost? The NuvlaBox is a simple, affordable IT solution which can do just that</p>
+    <center>
+      <p><a href="http://media.sixsq.com/how-to-bridge-the-digital-divide" class="btn btn-primary btn-lg" role="button">Read more &raquo;</a></p>
+    </center>
+  </div>
 </div>
-
-
-
-
+</div>
