--- a/products_and_services/index.html
+++ b/products_and_services/index.html
@@ -1,14 +1,14 @@
 ---
 layout: media
-title: Product Descriptions
-head-title: SixSq product descriptions&#58; Find out the benefits & specifications of our products
-class: product_descriptions
+title: Products and Services
+head-title: SixSq products and services descriptions&#58; Find out the benefits & specifications of our products and services
+class: portfolio
 category: resources
 ---
 
 <div class="jumbotron">
   <div class="container">
-    <h1>SixSq Product Descriptions</h1>
+    <h1>SixSq Portfolio Overview</h1>
     <h2>Read more about the benefits and technical specifications of SixSq products and services.</h2>
   </div>
 </div>
