--- a/products_and_services/index.html
+++ b/products_and_services/index.html
@@ -4,6 +4,10 @@ title: Products and Services
 head-title: SixSq products and services descriptions&#58; Find out the benefits & specifications of our products and services
 class: portfolio
 category: resources
+permalink: /products_and_services/
+redirect_from:
+  - /products/
+  - /services/
 ---
 
 <div class="jumbotron">
