Changes to NuvlaBox use case page. Change of style & include smart lighting reference

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: welcome
-title: Smart Cloud Automation Solutions
-summary: DevOps - Big Data - Smart City - IoT - Cyber Security. Our cutting-edge cloud technologies give you friction-less application deployment automation and all the tools you need to understand your cloud usage, control your costs and get more out of the cloud. 
+title: Smart Cloud Solutions for IoT, Smart Citites and Big Data
+summary: DevOps - Big Data - Smart City - IoT - Cyber Security. Our cutting-edge cloud technologies give you friction-less application deployment automation and all the tools you need to understand your cloud usage, control your costs and get more out of the cloud.
 twitter-image: /img/content/logo_sixsq.png
 ---
