eGuides page update

--- a/eguides/index.html
+++ b/eguides/index.html
@@ -15,12 +15,31 @@ category: resources
 
 <div class="jumbotron">
 <div class="container big">
+	
+    <div id="smart-city-eguide" class="row row-highlights">
+         <div class="col-md-6 col-2-image">
+           <h1>
+               <center>
+                   <img style="max-height: 280px;" src="/img/content/eguides/eguide_remote_communities_screen_shot.png" alt="eguide_remote_communities_screen_shot"/>
+               </center>
+           </h1>
+         </div>
+         <div class="col-md-6 col-2-text">
+             <h1>Bringing Innovative IT to Remote Communities</h1>
+             <p>Remote areas are often overlooked when it comes to communications and technology infrastructure, including provision of high-speed, secure internet access. Find out how innovative IT can help</p>
+             <center>
+               <p><a href="https://cdn2.hubspot.net/hubfs/475360/Data%20Pack/eGuides/nuvlabox/eGuide-NuvlaBox-remote-communities.pdf" 
+                   class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
+             </center>
+         </div>
+     </div>
+	 
     <div id="cyber-protection-eguide" class="row row-highlights">
       <div class="col-md-6 col-2-text">
         <h1>Cyber protection for critical infrastructures</h1>
         <p>All connected systems are vulnerable to cyber attacks. Are you responsible for cyber protection of critical infrastructures? Are you worried about the governance of your infrastructure in the face of cyber attacks? If so, read on.</p>
         <center>
-          <p><a href="http://media.sixsq.com/cyber-protection-for-critical-infrastructures" class="btn btn-primary btn-lg" role="button">Read more &raquo;</a></p>
+          <p><a href="https://cdn2.hubspot.net/hubfs/475360/Data%20Pack/eGuides/Sixsq-eguides-Cyber-protection-for-critical-infrastructures.pdf" class="btn btn-primary btn-lg" role="button">Read more &raquo;</a></p>
         </center>
       </div>
       <div class="col-md-6 col-2-image">
@@ -43,7 +62,7 @@ category: resources
              <h1>Cloud Solutions for Smart Cities</h1>
              <p>Smart Cities are the new tech topic. How do cloud technologies play a role in Smart Cities? Find out how to set the building blocks for your city in the cloud </p>
              <center>
-               <p><a href="http://media.sixsq.com/cyber-protection-for-smart-cities" 
+               <p><a href="https://cdn2.hubspot.net/hubfs/475360/Data%20Pack/eGuides/Sixsq-eguides-Smart-Cities.pdf" 
                    class="btn btn-primary btn-lg" role="button">Find out more &raquo;</a></p>
              </center>
          </div>
@@ -54,7 +73,7 @@ category: resources
         <h1>Managed Service Providers</h1>
         <p>Are you a Managed Service Provider looking to improve your services in this cloud era? Find out how introducing an affordable application deployment tool can change your business</p>
         <center>
-          <a href="http://media.sixsq.com/adding-value-to-managed-services" class="btn btn-primary btn-lg" role="button">Read it now &raquo;</a>
+          <a href="https://cdn2.hubspot.net/hubfs/475360/Data%20Pack/eGuides/Sixsq-eguides-MSPs.pdf" class="btn btn-primary btn-lg" role="button">Read it now &raquo;</a>
         </center>
     </div>
     <div class="col-md-6 col-2-image">
@@ -78,7 +97,7 @@ category: resources
           <h1>Value-Added Resellers</h1>
           <p>How can Value-Added Resellers capitalise on their application knowledge to provide managed services?  </p>
           <center>
-            <p><a href="http://media.sixsq.com/how-can-vars-benefit-from-application-deployment-automation" class="btn btn-primary btn-lg" role="button">Find out more &raquo;</a></p>
+            <p><a href="https://cdn2.hubspot.net/hubfs/475360/Data%20Pack/eGuides/Sixsq-eguides-VAR.pdf" class="btn btn-primary btn-lg" role="button">Find out more &raquo;</a></p>
           </center>
       </div>
   </div>
@@ -88,7 +107,7 @@ category: resources
       <h1>IaaS Service Providers</h1>
       <p>With so much competition in the cloud infrastructure market, IaaS providers have to find new ways to stand out. SixSq has the answer.</p>
       <center>
-        <p><a href="http://media.sixsq.com/how-can-iaas-providers-benefit-from-application-deployment-automation" class="btn btn-primary btn-lg" role="button">The answer is a click away &raquo;</a></p>
+        <p><a href="https://cdn2.hubspot.net/hubfs/475360/Data%20Pack/eGuides/Sixsq-eguides-IaaS.pdf" class="btn btn-primary btn-lg" role="button">The answer is a click away &raquo;</a></p>
       </center>
     </div>
     <div class="col-md-6 col-2-image">
@@ -112,7 +131,7 @@ category: resources
     <h1>Revolutionising education in emerging markets</h1>
     <p>Are you looking for a way to bring your software solutions to rural areas? Do you want to give your satellite technology an added boost? The NuvlaBox is a simple, affordable IT solution which can do just that</p>
     <center>
-      <p><a href="http://media.sixsq.com/how-to-bridge-the-digital-divide" class="btn btn-primary btn-lg" role="button">Read more &raquo;</a></p>
+      <p><a href="https://cdn2.hubspot.net/hubfs/475360/Data%20Pack/eGuides/Sixsq-eguides-education-emerging-markets.pdf" class="btn btn-primary btn-lg" role="button">Read more &raquo;</a></p>
     </center>
   </div>
 </div>
