Add edge computing to home page

--- a/eguides/index.html
+++ b/eguides/index.html
@@ -20,7 +20,7 @@ category: resources
          <div class="col-md-6 col-2-image">
            <h1>
                <center>
-                   <img style="max-height: 280px;" src="/img/content/eguides/eguide_remote_communities_screen_shot.png" alt="eguide_remote_communities_screen_shot"/>
+                   <img style="max-height: 280px;" src="/img/content/remote_communities.jpg" alt="eguide_remote_communities_screen_shot"/>
                </center>
            </h1>
          </div>
