Add Solutions Brief to resources and re-order nav bar

--- a/eguides/index.html
+++ b/eguides/index.html
@@ -1,7 +1,7 @@
 ---
 layout: media
 title: eGuide series
-head-title: eGuide series&#58; What are the benefits of cloud computing solutions?
+head-title: eGuide series&#58; What are the benefits of cloud and edge computing solutions?
 class: eguide
 category: resources
 ---
@@ -50,6 +50,7 @@ category: resources
         </h1>
       </div>
     </div>
+	
     <div id="smart-city-eguide" class="row row-highlights">
          <div class="col-md-6 col-2-image">
            <h1>
