Remove some old files

--- a/solutions_brief/index.html
+++ b/solutions_brief/index.html
@@ -9,7 +9,7 @@ category: resources
 <div class="jumbotron">
   <div class="container">
     <h1>Solutions Brief</h1>
-    <h2>These documents are designed to answer your questions about the funcitionality and advantages of our solutions. Don't hesitate to get in touch if you would like to know more.</h2>
+    <h2>These documents are designed to answer your questions about the functionality and advantages of our solutions. Don't hesitate to get in touch if you would like to know more.</h2>
   </div>
 </div>
 
