Update version of Smart Lighting solutions brief to 1.3

--- a/solutions_brief/index.html
+++ b/solutions_brief/index.html
@@ -30,7 +30,7 @@ category: resources
 and private buyers to look to new technologies for their street lighting systems. Find out how truly adaptive
 lighting can deliver significant energy savings.</p>
              <center>
-               <p><a href="https://cdn2.hubspot.net/hubfs/475360/Data%20Pack/Solutions%20Brief/NuvlaBox%20Smart%20Street%20Lighting%20Application.pdf" 
+               <p><a href="https://cdn2.hubspot.net/hubfs/475360/Marketing%20Materials/Solutions%20Brief/NuvlaBox%20Smart%20Street%20Lighting%20Application.pdf" 
                    class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
              </center>
          </div>
