--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: welcome
 title: Smart Cloud Solutions for IoT, Smart Citites and Big Data
-summary: Software Products and Services made of Swiss Excellence
+summary: Software Products &amp; Services made of Swiss Excellence
 twitter-image: /img/content/logo_sixsq.png
 ---
