--- a/about/about-us.html
+++ b/about/about-us.html
@@ -13,7 +13,7 @@ summary: We are software artisans, passionate about craftsmanship, DevOps and al
       <div class="item icon animated mt-20 mb-20">
 				<div class="row">
 					<div class="col-md-4 col-sm-6 col-xs-12">
-            <img style="margin: 100px; width: 50%;" src="/img/logo/logo_sixsq.png" alt="logo-sixsq"/>
+            <img style="width: 50%;" src="/img/logo/logo_sixsq.png" alt="logo-sixsq"/>
 					</div>
           <div class="col-md-8 col-sm-6 col-xs-12" >
             <h2>SixSq</h2>
@@ -26,7 +26,7 @@ summary: We are software artisans, passionate about craftsmanship, DevOps and al
 		</div>
     <div class="container focus-need">
       <div class="item icon animated mt-20 mb-20">
-        <div class="row">
+        <div class="row even">
           <div class="col-md-8 col-sm-6 col-xs-12" >
             <h2>Marc-Elian Bégin</h2>
             <p>Marc-Elian Bégin is CEO and one of the three original co-founders of SixSq. He holds a B.Eng. in Mechanical Engineering, specialising in Aerospace, from Ecole Polytechnique of Montreal and has been working in the software industry since 1994. During this time, he has worked with the Canadian and European Space Agencies, as well as CERN, on distributed software systems, grid and cloud computing development projects. In 2007, inspired by a drive to evangelise cloud computing, he realised one of his dreams and founded SixSq with 2 other partners. His current focus is edge computing technologies, DevOps and hybrid cloud solutions. With SixSq software and an amazing team, he builds smart city solutions and open data access to deliver real and tangible benefits to society. He regularly talks at local, national and international events, such as CeBIT, Swiss Open Cloud Day and CloudStack Collaboration Conference. Marc-Elian enjoys living and working in Geneva, Switzerland, while trying to keep up with his two fast-growing sons.
