--- a/about/contact.html
+++ b/about/contact.html
@@ -74,7 +74,8 @@ summary: We pride ourselves in giving customers and partners stellar support.  T
               <script>
                 hbspt.forms.create({ 
                   portalId: '475360',
-                  formId: 'a5849a59-bd28-4685-a1e1-3d4917af34fb'
+                  formId: 'a5849a59-bd28-4685-a1e1-3d4917af34fb',
+                  css: ''
                 });
               </script>
             </div>
