--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 ---
 layout: welcome
 twitter-image: /img/content/logo_sixsq.png
+title: Smart and secure cloud and edge software solutions for IoT, Smart City and Big Data 
 ---
