--- a/solutions/nuvlacity/nuvlacity-overview.html
+++ b/solutions/nuvlacity/nuvlacity-overview.html
@@ -4,8 +4,8 @@ product: nuvlacity
 category: solutions
 class: overview
 product-name: NuvlaCity
-title: Intelligent Edge Solution for the Smart City
-summary: Build at scale tomorrow's Smart City today, with a secured and future proof solution. Reduce operational costs, improve efficiency and most importantly security.
+title: Intelligent Edge Solutions for the Smart City
+summary: Build tomorrow's Smart City today with a secured and future-proof solution. Reduce operational costs, improve efficiency and enhance security.
 cfa: /something
 permalink: /solutions/nuvlacity/overview.html
 ---
