--- a/solutions/nuvlaoutpost/nuvlaoutpost-overview.html
+++ b/solutions/nuvlaoutpost/nuvlaoutpost-overview.html
@@ -4,8 +4,8 @@ product: nuvlaoutpost
 category: solutions
 class: overview
 product-name: NuvlaOutpost
-title: XXX Intelligent Edge Solution for the Smart City
-summary: Build at scale tomorrow's Smart City today, with a secured and future proof solution. Reduce operational costs, improve efficiency and most importantly security.
+title: Breaking down communication barriers
+summary: Improve ICT infrastructure with this simple, secure solution that ensures the delivery of up-to-date  content to any location.
 cfa: /something
 permalink: /solutions/nuvlaoutpost/overview.html
 ---
