--- a/solutions/nuvlascience/nuvlascience-overview.html
+++ b/solutions/nuvlascience/nuvlascience-overview.html
@@ -4,8 +4,8 @@ product: nuvlascience
 category: solutions
 class: overview
 product-name: NuvlaScience
-title: ZZZ Intelligent Edge Solution for the Smart City
-summary: Build at scale tomorrow's Smart City today, with a secured and future proof solution. Reduce operational costs, improve efficiency and most importantly security.
+title: Managing Big Data for Big Science
+summary: SixSq products are helping scientific institutions manage data in the cloud and at the edge.
 cfa: /something
 permalink: /solutions/nuvlascience/overview.html
 ---
