--- a/about/contact.html
+++ b/about/contact.html
@@ -16,7 +16,7 @@ summary: We pride ourselves in giving customers and partners stellar support.  T
             <h2>We're here to help!</h2>
             <p>If you have any questions, would like to give feedback or request a demo of our products, don't hesitate to get in touch.</p>
 						<ul>
-							<li class="fw400"><i class="fas fa-mobile fa-2x"></i>  info/support: +41 22 54 41 733</li>
+							<li class="fw400"><i class="fas fa-phone"></i>  info/support: +41 22 54 41 733</li>
 							<li class="fw400"><i class="fas fa-envelope"></i>  <a href="mailto:info@sixsq.com">info@sixsq.com</a></li>
 							<li class="fw400"><i class="fas fa-envelope"></i>  <a href="mailto:support@sixsq.com">support@sixsq.com</a></li>
 						</ul>
