Add news items and update text on news header

--- a/media/news.html
+++ b/media/news.html
@@ -1,9 +1,9 @@
 ---
-title: Read our news and what others write about us
+title: In The News
 layout: news
 product: media
 class: news
 category: media
 product-name: News
-summary: News coming from our own press, as well as what we believe is newsworthy from our field, but also partners and customers.
+summary: Discover the latest news and events from SixSq, our partners and customers.
 ---
