Refine text on media pages and add news items

--- a/media/eguides.html
+++ b/media/eguides.html
@@ -5,5 +5,5 @@ product: media
 class: eguides
 category: media
 product-name: e-Guides
-summary: These e-Guides provide high-level information on our products, services and the solutions we have developed based on these.
+summary: These informative documents explain the value delivered by our products and services
 ---
