--- a/media/overview.html
+++ b/media/overview.html
@@ -5,5 +5,5 @@ product: media
 class: overview
 category: media
 product-name: Media
-summary: Read and watch about our latest development and deep dive into our products, services and solutions.
+summary: Find out about our latest developments and dive into our products, services and solutions.
 ---
