--- a/media/videos.html
+++ b/media/videos.html
@@ -5,5 +5,5 @@ product: videos
 class: videos
 category: media
 product-name: Videos
-summary: Watch about our latest development, products, services and solutions.
+summary: Watch our latest developments, products, services and solutions.
 ---
