--- a/solutions/nuvlaoutpost/nuvlaoutpost-overview.html
+++ b/solutions/nuvlaoutpost/nuvlaoutpost-overview.html
@@ -8,4 +8,6 @@ title: Breaking down communication barriers
 summary: Improve ICT infrastructure with this simple, secure solution that ensures the delivery of up-to-date  content to any location.
 cfa: /something
 permalink: /solutions/nuvlaoutpost/overview.html
+redirect_from:
+  - /nuvlaoutpost
 ---
