--- a/solutions/nuvlascience/nuvlascience-overview.html
+++ b/solutions/nuvlascience/nuvlascience-overview.html
@@ -8,4 +8,6 @@ title: Managing Big Data for Big Science
 summary: SixSq products are helping scientific institutions manage data in the cloud and at the edge.
 cfa: /something
 permalink: /solutions/nuvlascience/overview.html
+redirect_from:
+  - /nuvlascience
 ---
