--- a/solutions/nuvlacity/nuvlacity-overview.html
+++ b/solutions/nuvlacity/nuvlacity-overview.html
@@ -8,4 +8,6 @@ title: Intelligent Edge Solutions for the Smart City
 summary: Build tomorrow's Smart City today with a secured and future-proof solution. Reduce operational costs, improve efficiency and enhance security.
 cfa: /something
 permalink: /solutions/nuvlacity/overview.html
+redirect_from:
+  - /nuvlacity
 ---
