--- a/about/customers.html
+++ b/about/customers.html
@@ -1,9 +1,9 @@
 ---
-title: Find-Out Who Our Customers Are
+title: Our Customers
 layout: customers
 product: about
 class: customers
 category: about
 product-name: Customers
-summary: Our customers allow us to grow and stay focused. This is why we value each relationship dearly.
+summary: We serve a growing customer base worldwide. Join the list and let SixSq solutions revolutionise your business.
 ---
