--- a/about/partners.html
+++ b/about/partners.html
@@ -1,9 +1,9 @@
 ---
-title: Partners we innovate with
+title: Partnership Boosts Innovation
 layout: partners
 product: about
 class: partners
 category: about
 product-name: Partners
-summary: We do the vast majority of our business working with partners. These relationships are therefore paramount for our success.
+summary: We work closely with several key partners to bring the best solutions to our customers.
 ---
