--- a/about/r-and-d.html
+++ b/about/r-and-d.html
@@ -5,5 +5,5 @@ product: about
 class: r-and-d
 category: about
 product-name: R&D
-summary: Discover our research and development activities, including Swiss and European collaborations we are proud to be involved in.
+summary: SixSq participates in European research and development activities and thereby delivers  cutting-edge innovation to its customers.
 ---
