--- a/media/solution-briefs.html
+++ b/media/solution-briefs.html
@@ -5,6 +5,6 @@ product: media
 class: solution-briefs
 category: media
 product-name: Solution Briefs
-summary: These documents are designed to answer your questions about the functionality and advantages of our solutions. Don't hesitate to get in touch if you would like to know more.
+summary: Find out more about the functionality and advantages of our solutions. Don't hesitate to get in touch if you have further questions.
 ---
       
