--- a/about/contact.html
+++ b/about/contact.html
@@ -6,7 +6,7 @@ class: contact
 category: about
 product-name: Contact Us
 title: Get in Touch or Come and Visit
-summary: We pride ourselves in giving customers and partners stellar support.  This starts with being highly available.
+summary: We pride ourselves on giving customers and partners excellent support. Don't hesitate to get in touch.
 ---
 
 		<section class="section-about gray-bg">
@@ -14,7 +14,7 @@ summary: We pride ourselves in giving customers and partners stellar support.  T
 				<div class="row focus-need mt-30 mb-30">
 					<div class="col-md-12 item icon animated mt-30 mb-30">
             <h2>We're here to help!</h2>
-            <p>If you have any questions, would like to give feedback or request a demo of our products, don't hesitate to get in touch.</p>
+            <p>If you have any questions, would like to give feedback or request a demo of our products, you can call, email, snail mail or even turn up in person.</p>
 						<ul>
 							<li class="fw400"><i class="fas fa-phone"></i>  info/support: +41 22 54 41 733</li>
 							<li class="fw400"><i class="fas fa-envelope"></i>  <a href="mailto:info@sixsq.com">info@sixsq.com</a></li>
