Update links to latest pdfs

--- a/solutions_brief/index.html
+++ b/solutions_brief/index.html
@@ -30,7 +30,7 @@ category: resources
 and private buyers to look to new technologies for their street lighting systems. Find out how truly adaptive
 lighting can deliver significant energy savings.</p>
              <center>
-               <p><a href="https://cdn2.hubspot.net/hubfs/475360/Marketing%20Materials/Solutions%20Brief/NuvlaBox%20Smart%20Street%20Lighting%20Application.pdf" 
+               <p><a href="https://media.sixsq.com/hubfs/Marketing%20Materials/Solutions%20Brief/NuvlaBox%20Smart%20Street%20Lighting%20Application%202018.pdf" 
                    class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
              </center>
          </div>
@@ -44,7 +44,7 @@ brings an unparalleled opportunity to deliver add-on service applications to loc
 terrestrial broadband is not available. Find out how the NuvlaBox can provide users of satellite connectivity and service providers with an
 affordable platform to host and support applications over a satellite link</p>
              <center>
-		          <p><a href="https://cdn2.hubspot.net/hubfs/475360/Data%20Pack/Solutions%20Brief/NuvlaBox%20Satellite%20Application.pdf" class="btn btn-primary btn-lg" role="button">Read more &raquo;</a></p>
+		          <p><a href="https://media.sixsq.com/hubfs/Marketing%20Materials/Solutions%20Brief/NuvlaBox%20Satellite%20Application%202018.pdf" role="button">Read more &raquo;</a></p>
 		        </center>
 		      </div>
 		      <div class="col-md-6 col-2-image">
