Update product descriptions

--- a/solutions_brief/index.html
+++ b/solutions_brief/index.html
@@ -44,7 +44,8 @@ brings an unparalleled opportunity to deliver add-on service applications to loc
 terrestrial broadband is not available. Find out how the NuvlaBox can provide users of satellite connectivity and service providers with an
 affordable platform to host and support applications over a satellite link</p>
              <center>
-		          <p><a href="https://media.sixsq.com/hubfs/Marketing%20Materials/Solutions%20Brief/NuvlaBox%20Satellite%20Application%202018.pdf" role="button">Read more &raquo;</a></p>
+		          <p><a href="https://media.sixsq.com/hubfs/Marketing%20Materials/Solutions%20Brief/NuvlaBox%20Satellite%20Application%202018.pdf" 
+					 class="btn btn-primary btn-lg" role="button">Read more &raquo;</a></p>
 		        </center>
 		      </div>
 		      <div class="col-md-6 col-2-image">
