--- a/products_and_services/index.html
+++ b/products_and_services/index.html
@@ -23,8 +23,10 @@ redirect_from:
         <h1>NuvlaBox</h1>
         <p>NuvlaBox is smart cloud-in-a-box appliance which offers easy and affordable access to cloud computing. It comes in two versions, standard and mini, both of which and can be customised with your own branding. If you want to read more about the business benefits and the software and hardware specifications, take a look at the product description.  </p>
         <center>
-          <p><a href="http://media.sixsq.com/nuvlabox-product-description" class="btn btn-primary btn-lg" role="button">Read more &raquo;</a></p>
+          <p><a href="https://media.sixsq.com/hubfs/Marketing%20Materials/Product_Descriptions/Sixsq-Product_Descriptions-NuvlaBox-2018.pdf" 
+              class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
         </center>
+        
       </div>
       <div class="col-md-6 col-2-image">
         <h1>
@@ -46,7 +48,7 @@ redirect_from:
              <h1>SlipStream</h1>
              <p>SlipStream is is a multi-cloud application management platform. It automates the full application management lifecycle and brings cost savings to companies large and small. Take a look at the product description to find out how it can support your DevOps, Big Data and Smart City strategies.</p>
              <center>
-               <p><a href="http://media.sixsq.com/slipstream-product-description" 
+               <p><a href="https://media.sixsq.com/hubfs/Marketing%20Materials/Product_Descriptions/Sixsq-Product_Descriptions-SlipStream-2018.pdf" 
                    class="btn btn-primary btn-lg" role="button">Find out more &raquo;</a></p>
              </center>
          </div>
@@ -57,7 +59,7 @@ redirect_from:
              <h1>Nuvla</h1>
              <p>Nuvla is a self-provisioning and a smart cloud brokerage service providing cost effective access to a wide range of cloud services. If you'd like to access cloud infrastructures without being tied to one provider, take a look at the product description and see how Nuvla can help you.</p>
              <center>
-               <a href="http://media.sixsq.com/nuvla-product-description" class="btn btn-primary btn-lg" role="button">Read it now &raquo;</a>
+               <a href="https://media.sixsq.com/hubfs/Marketing%20Materials/Product_Descriptions/Nuvla-Product-Description-2018.pdf" class="btn btn-primary btn-lg" role="button">Read it now &raquo;</a>
              </center>
          </div>
          <div class="col-md-6 col-2-image">
