--- a/about/about-us.html
+++ b/about/about-us.html
@@ -6,6 +6,8 @@ category: about
 product-name: About Us
 title: Discover SixSq and Our Team
 summary: We are software artisans, passionate about craftsmanship, DevOps and all the rigor required to build efficient and dependable software products and services.
+redirect_from:
+ - /about-us/
 ---
 
   <section class="section-about">
