--- a/about/contact.html
+++ b/about/contact.html
@@ -7,6 +7,8 @@ category: about
 product-name: Contact Us
 title: Get in Touch or Come and Visit
 summary: We pride ourselves on giving customers and partners excellent support. Don't hesitate to get in touch.
+redirect_from:
+ - /contact/
 ---
 
 		<section class="section-about gray-bg">
