--- a/about/customers.html
+++ b/about/customers.html
@@ -6,4 +6,6 @@ class: customers
 category: about
 product-name: Customers
 summary: We serve a growing customer base worldwide. Join the list and let SixSq solutions revolutionise your business.
+redirect_from:
+ - /customers/
 ---
