--- a/media/news.html
+++ b/media/news.html
@@ -6,4 +6,14 @@ class: news
 category: media
 product-name: News
 summary: Discover the latest news and events from SixSq, our partners and customers.
+permalink: /media/news/
+redirect_from:
+ - /news/
+ - /resources/
+ - /resources/2017/08/28/news-euresearch-success-story.html
+ - /resources/2018/01/18/news-wattdor-volumlight-january-2018.html
+ - /resources/2015/12/22/news-nuvla-rebrand.html
+ - /resources/2017/09/12/news-cyclone-meeting-september-2017.html
+ - /resources/2016/05/23/news-cyclone-meeting-may-2016.html
+ - /resources/2017/03/07/news-nuvlabox-training-april-2017.html
 ---
