--- a/media/videos.html
+++ b/media/videos.html
@@ -6,4 +6,6 @@ class: videos
 category: media
 product-name: Videos
 summary: Watch our latest developments, products, services and solutions.
+redirect_from:
+ - /videos/
 ---
