--- a/about/partners.html
+++ b/about/partners.html
@@ -6,4 +6,6 @@ class: partners
 category: about
 product-name: Partners
 summary: We work closely with several key partners to bring the best solutions to our customers.
+redirect_from:
+ - /partners/
 ---
