--- a/media/eguides.html
+++ b/media/eguides.html
@@ -6,4 +6,6 @@ class: eguides
 category: media
 product-name: e-Guides
 summary: These informative documents explain the value delivered by our products and services
+redirect_from:
+ - /eguides/
 ---
