--- a/about/jobs.html
+++ b/about/jobs.html
@@ -5,5 +5,5 @@ product: about
 class: jobs
 category: about
 product-name: Jobs
-summary: Our team of software artisans and innovators is our most pressous asset. Do you have what it takes to be part of the adventure?
+summary: Our team of software artisans and innovators is our most precious asset. Do you have what it takes to be part of the adventure?
 ---
