Small changes to About Us

--- a/about/about-us.html
+++ b/about/about-us.html
@@ -19,9 +19,9 @@ redirect_from:
 					</div>
           <div class="col-md-8 col-sm-6 col-xs-12" >
             <h2>SixSq</h2>
-            <p>SixSq was founded in August 2007 by 3 partners. The company provides cloud neutral solutions which allow companies and institutions to benefit from cloud computing while avoiding lock-in. Its smart cloud-in-a-box appliance, NuvlaBox®, is a simple plug & play edge solution which brings customers a private cloud at an affordable price as well as playing an intrinsic part of smart city and IoT strategies. SixSq’s smart multi-cloud and edge management platform, Nuvla®, offers application deployment from a single, simple dashboard. Nuvla® is powered by SlipStream®, the company’s cloud management platform, which allows users to deploy any application in any cloud or edge.</p>
+            <p>SixSq was founded in August 2007 by 3 partners. The company provides cloud and edge solutions which allow companies and institutions to benefit from the latest technologies in a secure and scalable way. Its smart cloud-in-a-box appliance, NuvlaBox®, is a simple plug & play solution which brings customers a private cloud at an affordable price. It also plays an intrinsic part in smart city and IoT strategies. SixSq’s smart multi-cloud and edge management platform, Nuvla®, offers application deployment from a single, simple dashboard. Nuvla® is powered by SlipStream®, the company’s cloud management platform, which allows users to deploy any application in any cloud or at the edge.</p>
             <p>SixSq’s active participation in numerous international cloud initiatives has solidified its reputation as a leading European cloud expert.</p>
-            <p>We go to market via strategic partnerships, ensuring that we have a global reach, helping our partners build powerful vertical solutions and deliver significant benefits.</p>
+            <p>The company's strategic partnerships ensure a global reach, allowing it to help its customers build powerful vertical solutions and deliver significant benefits.</p>
             <p>At the end of 2014, the company entered into a partnership with the RHEA Group, a leading supplier of systems engineering services and software solutions to the Aerospace and Security industries.</p>
           </div>
 				</div>
